--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:text="Login"
-        android:textSize="35dp"
+        android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
@@ -29,7 +29,7 @@
         android:layout_centerHorizontal="true"
         android:text="Mask Detection"
         android:textColor="#ff7aff24"
-        android:textSize="35dp"
+        android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,11 +42,11 @@
         android:layout_height="50dp"
         android:layout_below="@+id/imageView"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
         android:focusable="true"
         android:hint="Enter Name"
+        android:autofillHints="username"
+        android:inputType="text"
         android:textColorHighlight="#ff7eff15"
         android:textColorHint="#ffff25e6"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -73,14 +73,13 @@
     <EditText
         android:id="@+id/editText2"
         android:layout_width="411dp"
-        android:layout_height="41dp"
+        android:layout_height="50dp"
         android:layout_below="@+id/editText"
         android:layout_alignEnd="@+id/editText"
-        android:layout_alignRight="@+id/editText"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:ems="10"
         android:hint="Password"
+        android:autofillHints="password"
         android:inputType="textPassword"
         android:textColorHint="#ffff299f"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -96,9 +95,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText2"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:text="Attempts Left:"
-        android:textSize="25dp"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -110,20 +108,12 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textView2"
-        android:layout_alignBottom="@+id/textView2"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_toEndOf="@+id/textview"
-        android:layout_toRightOf="@+id/textview"
-        android:text="New Text"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.77" />
+        android:text=""
+        android:textSize="25sp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintLeft_toRightOf="@id/textView2"
+        app:layout_constraintTop_toTopOf="@id/textView2"
+        app:layout_constraintBottom_toBottomOf="@id/textView2"/>
 
     <Button
         android:id="@+id/button"
@@ -131,7 +121,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_toStartOf="@+id/textview"
-        android:layout_toLeftOf="@+id/textview"
         android:text="login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -146,7 +135,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_toEndOf="@+id/textview"
-        android:layout_toRightOf="@+id/textview"
         android:text="Cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
