Symptom checker updated

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         android:layout_below="@+id/textview"
         android:layout_centerHorizontal="true"
         android:text="Mask Detection"
-        android:textColor="#ff7aff24"
+        android:textColor="@color/black"
         android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,8 +47,8 @@
         android:hint="Enter Name"
         android:autofillHints="username"
         android:inputType="text"
-        android:textColorHighlight="#ff7eff15"
-        android:textColorHint="#ffff25e6"
+        android:textColorHighlight="@color/black"
+        android:textColorHint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -81,7 +81,7 @@
         android:hint="Password"
         android:autofillHints="password"
         android:inputType="textPassword"
-        android:textColorHint="#ffff299f"
+        android:textColorHint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
