--- a/app/src/main/res/layout/mask_layout.xml
+++ b/app/src/main/res/layout/mask_layout.xml
@@ -1,38 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    xmlns:tools="http://schemas.android.com/tools">
+    tools:context=".Mask">
 
-    <ImageView
-        android:layout_weight="1"
-        android:id="@+id/imageView"
+    <Button
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_weight="0"
+        android:background="@drawable/ic_baseline_arrow_back_24"
+        android:id="@+id/exit_camera"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints"
+        android:translationZ="90dp"/>
+    <TextView
+        android:id="@+id/mask_detected_text"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="110dp"
+        android:textSize="60sp"
+        android:textAlignment="center"
+        android:layout_weight="0"
+        tools:ignore="MissingConstraints"
+        android:text="Hello"
+        android:translationZ="90dp"
+        />
+    <androidx.camera.view.PreviewView
+        android:layout_weight="2"
+        android:id="@+id/cameraView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/mask_btn_layout">
+    </androidx.camera.view.PreviewView>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:orientation="horizontal"
+        android:id="@+id/mask_btn_layout"
+        app:layout_constraintTop_toBottomOf="@+id/cameraView"
+        app:layout_constraintBottom_toBottomOf="@id/cameraButton">
     <Button
-        android:id="@+id/green"
+        android:id="@+id/btn_msk_detected"
         android:text="Mask"
         android:textStyle="bold"
-        android:textColor="#ffffff"
+        android:textColor="@color/green"
         android:layout_width="175dp"
         android:layout_height="50dp"
         android:layout_weight="1" />
 
     <Button
-        android:id="@+id/red"
+        android:id="@+id/btn_msk_not_detected"
         android:text="No Mask"
         android:textStyle="bold"
-        android:textColor="#ffffff"
+        android:textColor="@color/red"
         android:layout_width="175dp"
         android:layout_height="50dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"/>
     </LinearLayout>
 
     <Button
@@ -42,9 +72,11 @@
         android:background="@color/design_default_color_on_primary"
         android:id="@+id/cameraButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mask_btn_layout"/>
 
 
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
