--- a/app/src/main/res/layout/fragment_timecard.xml
+++ b/app/src/main/res/layout/fragment_timecard.xml
@@ -27,28 +27,14 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:backgroundTint="@color/white"
-            app:layout_constraintBottom_toTopOf="@id/button4"
+            app:layout_constraintBottom_toTopOf="@id/submit_btn"
             app:layout_constraintTop_toBottomOf="@id/Maintitle">
 
         </androidx.recyclerview.widget.RecyclerView>
 
         <Button
-            android:id="@+id/button4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="75dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="72dp"
-            android:layout_marginBottom="22dp"
-            android:text="Back"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/button5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/timeCard_RV" />
-
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="wrap_content"
+            android:id="@+id/submit_btn"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="72dp"
             android:layout_marginTop="20dp"
@@ -58,7 +44,7 @@
 
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/button4"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/timeCard_RV" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
