--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -67,10 +67,10 @@
             android:layout_marginStart="16dp"
             android:text="Report Symptoms"
             android:textAlignment="center"
+            android:layout_marginBottom="10dp"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/test_btn"
             android:textColor="@color/white"/>
 
         <ImageButton
@@ -79,9 +79,7 @@
             android:layout_height="130dp"
             android:background="@drawable/ic_baseline_science_24"
             android:backgroundTint="@color/white"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="550dp"
-            app:layout_constraintBottom_toTopOf="@id/test_TV"
+            app:layout_constraintBottom_toBottomOf="@id/test_TV"
             app:layout_constraintStart_toStartOf="@id/test_TV"
             app:layout_constraintEnd_toEndOf="@id/test_TV"/>
 
@@ -93,20 +91,18 @@
             android:text="Mask Check-Up"
             android:textAlignment="center"
             android:textSize="20sp"
+            android:layout_marginBottom="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/mask_btn"
             android:textColor="@color/white"/>
 
         <ImageButton
             android:id="@+id/mask_btn"
-            android:layout_width="138dp"
+            android:layout_width="130dp"
             android:layout_height="130dp"
             android:background="@drawable/ic_baseline_masks_24"
             android:backgroundTint="@color/white"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="550dp"
-            app:layout_constraintBottom_toTopOf="@id/mask_TV"
+            app:layout_constraintBottom_toBottomOf="@id/mask_TV"
             app:layout_constraintEnd_toEndOf="@id/mask_TV"
             app:layout_constraintStart_toStartOf="@id/mask_TV" />
 
