--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -25,6 +25,106 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
+        <ImageView
+            android:id="@+id/profile_IV"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/Maintitle"
+
+            tools:src="@drawable/ic_baseline_person_24"
+            android:layout_marginTop="30dp"
+            android:outlineAmbientShadowColor="@color/black"
+            android:outlineSpotShadowColor="@color/black"/>
+
+
+        <TextView
+            android:id="@+id/name_input_TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bob Daniels"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/name_TV"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="30dp"/>
+
+        <TextView
+            android:id="@+id/department_TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Department:"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/name_TV"
+            app:layout_constraintTop_toBottomOf="@id/name_TV"
+            android:layout_marginTop="10dp"/>
+
+        <TextView
+            android:id="@+id/department_input_TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Information Technolgy"
+            android:textSize="20sp"
+            app:layout_constraintTop_toBottomOf="@id/name_input_TV"
+            app:layout_constraintStart_toEndOf="@id/department_TV"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="30dp"/>
+
+        <TextView
+            android:id="@+id/gender_TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Gender:"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@id/name_TV"
+            app:layout_constraintStart_toStartOf="@id/name_TV"
+            app:layout_constraintTop_toBottomOf="@id/department_TV"
+            android:layout_marginTop="10dp"/>
+
+        <TextView
+            android:id="@+id/gender_input_TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Male"
+            android:textSize="20sp"
+            app:layout_constraintStart_toEndOf="@id/gender_TV"
+            app:layout_constraintTop_toBottomOf="@id/department_input_TV"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="30dp"/>
+
+        <TextView
+            android:id="@+id/name_TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name:"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/profile_IV"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/job_TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Job Title:"
+            android:textSize="20sp"
+            app:layout_constraintTop_toBottomOf="@id/gender_TV"
+            app:layout_constraintEnd_toEndOf="@id/name_TV"
+            android:layout_marginTop="10dp" />
+
+        <TextView
+            android:id="@+id/job_input_TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Information Technician"
+            android:textSize="20sp"
+            app:layout_constraintStart_toEndOf="@id/job_TV"
+            app:layout_constraintTop_toBottomOf="@id/gender_input_TV"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="30dp"/>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
