possibly removed grey background from timecard and profile

--- a/app/src/main/res/layout/fragment_timecard.xml
+++ b/app/src/main/res/layout/fragment_timecard.xml
@@ -8,8 +8,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:backgroundTint="@color/cardview_dark_background">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/Maintitle"
