--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -9,8 +9,7 @@
     <!--Place all new objects into constraint layout-->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:backgroundTint="@color/cardview_dark_background">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/Maintitle"
@@ -32,11 +31,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/Maintitle"
-
             tools:src="@drawable/ic_baseline_person_24"
-            android:layout_marginTop="30dp"
-            android:outlineAmbientShadowColor="@color/black"
-            android:outlineSpotShadowColor="@color/black"/>
+            android:layout_marginTop="30dp"/>
 
 
         <TextView
