removed grey background from fragments

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -69,15 +69,13 @@
             android:layout_marginBottom="10dp"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:textColor="@color/black"/>
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <ImageButton
             android:id="@+id/test_btn"
             android:layout_width="130dp"
             android:layout_height="130dp"
             android:background="@drawable/ic_baseline_science_24"
-            android:backgroundTint="@color/black"
             app:layout_constraintBottom_toBottomOf="@id/test_TV"
             app:layout_constraintStart_toStartOf="@id/test_TV"
             app:layout_constraintEnd_toEndOf="@id/test_TV"/>
@@ -92,15 +90,13 @@
             android:textSize="20sp"
             android:layout_marginBottom="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textColor="@color/black"/>
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <ImageButton
             android:id="@+id/mask_btn"
             android:layout_width="130dp"
             android:layout_height="130dp"
             android:background="@drawable/ic_baseline_masks_24"
-            android:backgroundTint="@color/black"
             app:layout_constraintBottom_toBottomOf="@id/mask_TV"
             app:layout_constraintEnd_toEndOf="@id/mask_TV"
             app:layout_constraintStart_toStartOf="@id/mask_TV" />
